[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/graphics/ui/text/title.png" type="Texture" id=1]
[ext_resource path="res://resources/visual/gui/theme_standard.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/SoundButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Main.gd" type="Script" id=4]
[ext_resource path="res://src/game/ScreenTransition.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 152, 50 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 50, 152, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 152, 50 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 50, 152, 50 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="TitleContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.333
anchor_right = 0.5
anchor_bottom = 0.333
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleAnim" type="AnimatedSprite" parent="TitleContainer"]
frames = SubResource( 5 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.667
anchor_right = 0.5
anchor_bottom = 0.667
margin_left = -24.0
margin_top = -26.0
margin_right = 24.0
margin_bottom = 26.0

[node name="Start" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_right = 48.0
margin_bottom = 24.0
rect_min_size = Vector2( 48, 24 )
theme = ExtResource( 2 )
text = "Start"

[node name="Quit" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_top = 28.0
margin_right = 48.0
margin_bottom = 52.0
rect_min_size = Vector2( 48, 24 )
theme = ExtResource( 2 )
text = "Quit"

[node name="ScreenTransition" parent="." instance=ExtResource( 5 )]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -11.0
margin_right = 33.0
margin_bottom = -4.0
theme = ExtResource( 2 )
text = "AaronWizard, 2021"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
